# asaot-sandbox

./: .gitignore  .gitmodules  README.md
AngelScript/: CMakeLists.txt
AngelScript/results/: angelscript_aot_results.json  angelscript_noaot_results.json
AngelScript/scripts/: sample.as
AngelScript/src/: main.cpp
Lua/: CMakeLists.txt
Lua/results/: lua_results.json
Lua/scripts/: bench.lua
Lua/src/: main.cpp
common/: benchmark_common.h  benchmark_workloads.h
reports/: lua_vs_angelscript_aot.md
sandbox/: CMakeLists.txt  sample.as  sample.cpp
